NetworkPolicies/examples/target-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: target
  name: target
spec:
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 1234
  selector:
    app: target
